--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
         <button onclick="generateRandomArray(slider.value)" id="randomize">
           Randomize
         </button>
+        <button onclick="tr()">try</button>
         <button onclick="process()" id="solve" disabled>solve</button>
         <select name="select" id="select">
           <option value="1">Bubble Sort</option>
           <option value="2">Heap Sort</option>
           <option value="3">Insertion Sort</option>
           <option value="4">Quick Sort</option>
+          <option value="5">Selection Sort</option>
         </select>
         <input type="range" min="1" max="100" value="10" id="Range" />
         <p>Value: <span id="demo"></span></p>
