--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
         <button onclick="generateRandomArray(slider.value)" id="randomize">
           Randomize
         </button>
-        <button onclick="tr()">try</button>
         <button onclick="process()" id="solve" disabled>solve</button>
         <select name="select" id="select">
           <option value="1">Bubble Sort</option>
@@ -19,8 +18,16 @@
           <option value="3">Insertion Sort</option>
           <option value="4">Quick Sort</option>
           <option value="5">Selection Sort</option>
+          <option value="6">Gnome Sort</option>
         </select>
-        <input type="range" min="1" max="100" value="10" id="Range" />
+        <input
+          type="range"
+          min="1"
+          max="100"
+          value="10"
+          id="Range"
+          class="slider"
+        />
         <p>Value: <span id="demo"></span></p>
       </div>
 
